single click expand in instrument selection dialog, fix tab order, search first
Former-commit-id: d91df52d4696d76919a3ba30d88accc9d9770443

--- a/mscore/instrdialog.ui
+++ b/mscore/instrdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>683</width>
-    <height>340</height>
+    <width>670</width>
+    <height>405</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -55,6 +55,9 @@
          </property>
          <property name="itemsExpandable">
           <bool>true</bool>
+         </property>
+         <property name="expandsOnDoubleClick">
+          <bool>false</bool>
          </property>
          <property name="columnCount">
           <number>1</number>
@@ -354,6 +357,23 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>search</tabstop>
+  <tabstop>clearSearch</tabstop>
+  <tabstop>instrumentList</tabstop>
+  <tabstop>addButton</tabstop>
+  <tabstop>removeButton</tabstop>
+  <tabstop>upButton</tabstop>
+  <tabstop>downButton</tabstop>
+  <tabstop>belowButton</tabstop>
+  <tabstop>linkedButton</tabstop>
+  <tabstop>partiturList</tabstop>
+  <tabstop>showMore</tabstop>
+  <tabstop>loadButton</tabstop>
+  <tabstop>saveButton</tabstop>
+  <tabstop>okButton</tabstop>
+  <tabstop>cancelButton</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
