more flexible root handling
Allow "sym" declarations in chord description file to take string
values, support class="note" to differentiate "b" used as note name from
"b" used as flat (also "mi" for note name versus minor), allow lower
case letter on its own to imply minor if lowerCaseMinorChords is set by
using "=" as a special hidden abbreviation.


Former-commit-id: 8864567934cf089239cd400a00774d3c460f5e57

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -3702,7 +3702,7 @@ p, li { white-space: pre-wrap; }
                <item>
                 <widget class="QRadioButton" name="useStandardNoteNames">
                  <property name="toolTip">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A, Bb, B, C, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A, Bb, B, C, C#, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="text">
                   <string>Standard</string>
@@ -3712,7 +3712,7 @@ p, li { white-space: pre-wrap; }
                <item>
                 <widget class="QRadioButton" name="useGermanNoteNames">
                  <property name="toolTip">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A, B, H, C, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A, B, H, C, Cis, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="text">
                   <string>German</string>
@@ -3722,7 +3722,7 @@ p, li { white-space: pre-wrap; }
                <item>
                 <widget class="QRadioButton" name="useItalianNoteNames">
                  <property name="toolTip">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;La, Sib, Si, Do, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;La, Sib, Si, Do, Do#, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="text">
                   <string>Italian</string>
