fix #11115: support solfeggio note names
Actual support was added in previous commits; this is really just
cleanup and renaming the option from "Italian" to "Solfeggio".


Former-commit-id: a90d21f8c792a4d3403c73d144c3f345ff40462d

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -3720,12 +3720,12 @@ p, li { white-space: pre-wrap; }
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="useItalianNoteNames">
+                <widget class="QRadioButton" name="useSolfeggioNoteNames">
                  <property name="toolTip">
                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;La, Sib, Si, Do, Do#, ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                  <property name="text">
-                  <string>Italian</string>
+                  <string>Solfeggio</string>
                  </property>
                 </widget>
                </item>
@@ -4565,7 +4565,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>chordsXmlFile</tabstop>
   <tabstop>useStandardNoteNames</tabstop>
   <tabstop>useGermanNoteNames</tabstop>
-  <tabstop>useItalianNoteNames</tabstop>
+  <tabstop>useSolfeggioNoteNames</tabstop>
   <tabstop>lowerCaseMinorChords</tabstop>
   <tabstop>harmonyY</tabstop>
   <tabstop>harmonyFretDist</tabstop>
