fixes for timesig & more...
Former-commit-id: 71d39e6ffe70fb6a75e81f220e6122ebf85e775a

--- a/mscore/timesigproperties.ui
+++ b/mscore/timesigproperties.ui
@@ -78,7 +78,7 @@
            </sizepolicy>
           </property>
           <property name="title">
-           <string>GroupBox</string>
+           <string>Note Groups</string>
           </property>
          </widget>
         </item>
