added light theme, removed native theme
Former-commit-id: ddbb8f5e706585d328d4f92344051ab87de19e67

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -31,7 +31,7 @@
         <file>revision.h</file>
         <file>data/musescore_logo_full1.png</file>
         <file alias="data/appstyle-dark.css">../share/styles/appstyle-dark.css</file>
-        <file alias="data/appstyle.css">../share/styles/appstyle.css</file>
+        <file alias="data/appstyle-light.css">../share/styles/appstyle-light.css</file>
         <file>data/greendot.svg</file>
         <file>data/darkgreendot.svg</file>
         <file>data/recordOn.svg</file>
