--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -28,6 +28,7 @@
       <file>revision.h</file>
       <file>data/musescore_logo_full1.png</file>
       <file alias="data/appstyle-dark.css">../share/styles/appstyle-mac-dark.css</file>
+      <file alias="data/appstyle-light.css">../share/styles/appstyle-mac-light.css</file>
 
       <file>data/greendot.svg</file>
       <file>data/darkgreendot.svg</file>
