--- a/mscore/debugger/debugger.ui
+++ b/mscore/debugger/debugger.ui
@@ -27,7 +27,7 @@
        </property>
        <property name="icon">
         <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/go-previous.svg</normaloff>:/data/icons-dark/go-previous.svg</iconset>
+         <normaloff>:/data/icons/go-previous.svg</normaloff>:/data/icons/go-previous.svg</iconset>
        </property>
       </widget>
      </item>
@@ -35,7 +35,7 @@
       <widget class="QToolButton" name="forward">
        <property name="icon">
         <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/go-next.svg</normaloff>:/data/icons-dark/go-next.svg</iconset>
+         <normaloff>:/data/icons/go-next.svg</normaloff>:/data/icons/go-next.svg</iconset>
        </property>
       </widget>
      </item>
@@ -46,7 +46,7 @@
        </property>
        <property name="icon">
         <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/view-refresh.svg</normaloff>:/data/icons-dark/view-refresh.svg</iconset>
+         <normaloff>:/data/icons/view-refresh.svg</normaloff>:/data/icons/view-refresh.svg</iconset>
        </property>
       </widget>
      </item>
