switch musescore logo in about box depending on style
Former-commit-id: 859b9aa84901bf39f9a5be3a50fb7f0157498530

--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -27,6 +27,7 @@
       <file>data/cancel.png</file>
       <file>revision.h</file>
       <file>data/musescore_logo_full1.png</file>
+      <file>data/musescore_logo_full.png</file>
 
       <file>data/greendot.svg</file>
       <file>data/darkgreendot.svg</file>
