--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -31,6 +31,7 @@
         <file>data/close.png</file>
         <file>revision.h</file>
         <file>data/musescore_logo_full1.png</file>
+        <file>data/musescore_logo_full.png</file>
         <file>data/greendot.svg</file>
         <file>data/darkgreendot.svg</file>
         <file>data/recordOn.svg</file>
