--- a/effects/zita1/zita.qrc
+++ b/effects/zita1/zita.qrc
@@ -1,6 +1,8 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
    <qresource>
+      <file alias="/zita1/zita.qml">zita.qml</file>
+      <file alias="/zita1/Rotary.qml">Rotary.qml</file>
       <file alias="/zita1/eq1sect.png">eq1sect.png</file>
       <file alias="/zita1/eq2sect.png">eq2sect.png</file>
       <file alias="/zita1/mixsect.png">mixsect.png</file>
